--- a/index.html
+++ b/index.html
@@ -1,31 +1,25 @@
 <!DOCTYPE html>
-<html lang="en" ng-app>
+<html lang="en" ng-app='myApp'>
 <head>
 	<title>Angular Demo</title>
+	<meta charset="UTF-8">
 	<script type="text/javascript" src="lib/angular/angular.min.js"></script>
+	<script type="text/javascript" src="js/controller.js"></script>
 </head>
 <body>
 <!-- Here ng-model is a Directive which bind any input field or select foeld or text area with the templete {{}} -->
+
 <input type="text" ng-model="name"></input>
 <h2>Welcome {{name}}</h2>
 <h1>{{name}}</h1>
 <hr>
+
+
 <div ng-controller = 'myController'>
 	<h1>{{author.name}}</h1>
-	<!-- <p>{{auther.designation + 'in' + auther.company + 'and my Salary is' + auther.salary}}</p> -->
+	<p>{{'I am a ' + author.designation + ' in ' + author.company + ' and my Salary is ' + author.salary +' PKR'}}</p>
 
 
 </div>
-<script>
-function myController($scope) {
-	$scope.author = {
-		'name' : 'Saif-ur-Rehman' ,
-		'designation' : 'Drupal Developer' ,
-		'company' : 'Devtron Genises' ,
-		'salary' : '500000'
-	}
-}
-	
-</script>
 </body>
 </html>
